--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
 	"scripts": {
 		"get": "node ./pwnagetty/pwnagetty-get-pcaps.js",
 		"generate": "node ./pwnagetty/pwnagetty-generate.js",
-		"passwords": "node ./hashcat/generator/custom-wordlist-generator.js",
+		"combos": "node ./hashcat/generator/wordlist-combinations-generator.js",
 		"attacks": "node ./scripts/generate-attacks-list.js",
 		"scripts": "node ./scripts/generate-hashcat-scripts.js && chmod +x ./hashcat/attack-scripts/*",
 		"vagrant-up": "cd ./windows/vagrant && vagrant up --provision",
