--- a/.gitignore
+++ b/.gitignore
@@ -163,4 +163,4 @@ known-passwords.txt
 known-passwords.dic
 hashcat/wordlists/*
 !rockyou.txt.gz
-hashcat/generator/wordlist-plus-rule-combinations.txt
+hashcat/generator/outputs/*.txt
