- New comments. - Using variables instead of hardcoded.

--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
 	"description": "",
 	"main": "index.js",
 	"scripts": {
+		"cli": "node ./cli/cli.mjs",
 		"get": "node ./pwnagetty/pwnagetty-get-pcaps.js",
 		"vagrant-up": "cd ./windows/vagrant && vagrant up --provision",
 		"vagrant-destroy": "cd ./windows/vagrant && vagrant destroy -f",
@@ -14,8 +15,7 @@
 		"passwords": "node ./scripts/custom-wordlist-generator.js",
 		"combos": "node ./hashcat/generator/wordlist-combinations-generator.js",
 		"most": "npm run generate && npm run attacks && npm run scripts",
-		"all": "npm run get && npm run most",
-		"cli": "node ./cli/cli.mjs "
+		"all": "npm run get && npm run most"
 	},
 	"repository": {
 		"type": "git",
